# WhoCanIVoteFor

./: .gitignore  .pre-commit-config.yaml  INSTALL.md  Makefile  README.md  appspec.yml  conftest.py  dc_utils  package-lock.json  package.json  pyproject.toml  sam-template.yaml  waf-template.yaml
.circleci/: config.yml
deploy/after_install/: collectstatic.sh  compilemessages.sh  install_npm_deps.sh  install_python_deps.sh  system_files.sh  write_envfile.py
deploy/before_install/: initial_setup.sh
deploy/files/scripts/: remove_db_replication.sh  setup_db_replication.sh
deploy/files/systemd/: gunicorn.service
docs/: iam.md
fixtures/vcr_cassettes/: test_dc_logging_postcode_invalid.yaml  test_postcode_view_with_invalid_postcode.yaml  test_uprn_view.yaml
locale/cy/LC_MESSAGES/: django.po
locale/en/LC_MESSAGES/: django.po
requirements/: base.txt  production.txt  testing.txt
wcivf/: lambda_handler.py  urls.py
wcivf/apps/administrations/: constants.py  forms.py  helpers.py  urls.py  views.py
wcivf/apps/administrations/templates/administrations/: administrations_for_postcode.html
wcivf/apps/administrations/templates/elections/: your_area.html
wcivf/apps/administrations/tests/: test_admistration_object.py
wcivf/apps/api/: serializers.py  views.py
wcivf/apps/api/tests/: test_api.py
wcivf/apps/core/: context_processors.py  db_routers.py  helpers.py  slack.py  views.py
wcivf/apps/core/management/commands/: truncate_replicated_tables.py
wcivf/apps/core/templatetags/: markdown_filter.py
wcivf/apps/core/tests/: __init__.py  helpers.py  test_context_processors.py  test_filters.py  test_frontend.py
wcivf/apps/elections/: admin.py  devs_dc_client.py  dummy_models.py  filters.py  import_helpers.py  models.py  urls.py
wcivf/apps/elections/management/commands/: import_ballots.py
wcivf/apps/elections/migrations/: 0008_auto_20160406_2141.py  0044_election_ee_last_updated.py  0044_fix_territory.py  0045_alter_post_territory.py  0046_postelection_by_election_reason.py  0047_alter_postelection_metadata_and_more.py  0048_postelection_results_source_url.py  0049_alter_postelection_results_source_url.py  0050_alter_postelection_by_election_reason.py  0051_alter_postelection_by_election_reason.py  0052_alter_postelection_by_election_reason.py
wcivf/apps/elections/templates/: parl_24_winners_full.html
wcivf/apps/elections/templates/elections/: ams.html  boundary_reviews_view.html  election_view.html  elections_view.html  fptp.html  party_list_view.html  post_view.html  postcode_view.html  pr-cl.html  pr-cl_cy.html  sv.html
wcivf/apps/elections/templatetags/: parl_24.py  postcode_tags.py
wcivf/apps/elections/tests/: factories.py  test_election_views.py  test_helpers.py  test_models.py  test_postcode_views.py
wcivf/apps/elections/views/: __init__.py  election_views.py  mixins.py  postcode_view.py
wcivf/apps/feedback/: admin.py  forms.py  models.py  urls.py  views.py
wcivf/apps/feedback/migrations/: 0009_alter_feedback_vote.py  0010_noelectionfeedback.py  0011_alter_noelectionfeedback_options.py
wcivf/apps/feedback/templates/feedback/: feedback_form.html  feedback_thanks.html  no_election_feedback_form.html  no_election_feedback_form_view.html
wcivf/apps/hustings/: context_processors.py  models.py  views.py
wcivf/apps/hustings/templates/hustings/: husting_form.html
wcivf/apps/hustings/tests/: test_hustings.py
wcivf/apps/leaflets/management/commands/: import_leaflets.py
wcivf/apps/leaflets/tests/: test_import_leaflets.py
wcivf/apps/parties/: filters.py  importers.py  models.py
wcivf/apps/parties/management/commands/: import_local_parties.py
wcivf/apps/parties/migrations/: 0023_localparty_bluesky_localparty_instagram.py  0024_alter_partyemblem_description.py  0025_alter_party_ec_id.py
wcivf/apps/parties/templates/parties/: parties_view.html  party_detail.html  party_list.html  regional_manifesto.html  single_manifesto.html  speaker_seeking_reelection.html
wcivf/apps/parties/tests/: test_import_parties.py  test_importers.py  test_party_views.py
wcivf/apps/people/: dummy_models.py  helpers.py  managers.py  models.py  views.py
wcivf/apps/people/management/commands/: import_people.py  import_wikipedia_bios.py
wcivf/apps/people/migrations/: 0050_alter_personredirect_options_and_more.py  0051_alter_personredirect_old_person_id_and_more.py
wcivf/apps/people/tests/: factories.py  helpers.py  test_person_models.py  test_person_views.py
wcivf/apps/ppc_2024/: filters.py
wcivf/assets/js/: hexmap.min.js
wcivf/assets/scss/: main.scss  style.scss
wcivf/settings/: base.py  ci.py  lambda.py  local.example.py
wcivf/static/COMPILED/scss/: main.css
wcivf/templates/: _compressed_css.html  base.html  home.html  parl_24_hex_map.html
(+83 files in other folders)
