[project]
name = "WhoCanIVoteFor"
version = "0.0.0"
description = "🗳 The source for https://whocanivotefor.co.uk/"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-filter==25.2",
    "django==5.2.8",
    "psycopg2-binary==2.9.9",
    "requests==2.32.4",
    "django-model-utils==5.0.0",
    "markdown==3.5.1",
    "markdown-it-py==4.0.0",
    "django-localflavor==5.0",
    "django-extensions==4.1.0",
    "djangorestframework==3.16.1",
    "icalendar==5.0.7",
    "dc-django-utils",
    "dc-logging-utils",
    "djangorestframework-jsonp==1.0.2",
    "feedparser==6.0.10",
    "uk-election-timetables==4.3.0",
    "uk-election-ids==0.10.0",
    "django-dotenv==1.4.2",
    "akismet==24.5.1",
    "dc-design-system",
    "boto3==1.36.11",
    "django-middleware-global-request==0.3.5",
    "nh3==0.2.21",
]

[tool.uv.sources]
dc-design-system = { git = "https://github.com/DemocracyClub/design-system.git", tag = "0.9.0" }
dc-django-utils = { git = "https://github.com/DemocracyClub/dc_django_utils.git", tag = "8.0.5" }
dc-logging-utils = { git = "https://github.com/DemocracyClub/dc_logging.git", tag = "3.0.0" }

[tool.uv]
package = false
required-version = "==0.9.*"
environments = [
    "platform_python_implementation == 'CPython'"
]

[dependency-groups]
deploy = [
    "django-redis==6.0.0",
    "gevent<24.10.1",
    "gunicorn[gevent]==22.0.0",
    "sentry-sdk==2.41.0",
]
dev = [
    "ipdb==0.13.13",
    "pre-commit==4.0.1",
    "pytest-django==4.9.0",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "factory-boy==3.3.1",
    "vcrpy==7.0.0",
    "pytest-freezegun==0.4.2",
    "pytest-mock==3.14.0",
    "pytest-subtests==0.13.1",
    "tomlkit==0.13.2",
    "freezegun==1.2.2",
    "django-debug-toolbar==6.0.0",
    "djhtml==3.0.6",
    "ruff==0.1.15",
    "pytest-ruff==0.2.1",
    "pytidylib==0.3.2",
]

[tool.ruff]
line-length = 80
lint.ignore = ["E501"]
lint.extend-select = [
    "I",
    "C4",
    "SIM",
    "Q003",
    "RET",
]
extend-exclude = ["wcivf/settings/local.py"]

[tool.pytest.ini_options]
norecursedirs =[
    "src",
    "wcivf/static_root",
    ".aws-sam",
    ".ruff-cache",
    ".circleci",
]
DJANGO_SETTINGS_MODULE = "wcivf.settings.base"
addopts =[
    "--ignore=*/__pycache__",
    "--ignore=.*",
    "--ignore=.download-cache",
    "--ignore=wcivf/settings/local.py",
    "--ignore=lib",
    "--ruff",
    "--ruff-format",
]
